--- a/AirplaneBookingSystem/AirplaneBookingSystem.Client/Views/ClientWindow.axaml
+++ b/AirplaneBookingSystem/AirplaneBookingSystem.Client/Views/ClientWindow.axaml
@@ -3,25 +3,29 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="AirplaneBookingSystem.Client.Views.AirplaneWindow"
+        x:Class="AirplaneBookingSystem.Client.Views.ClientWindow"
         xmlns:vm="using:AirplaneBookingSystem.Client.ViewModels"
-		Title="Airplane editing"
-		MaxWidth="400"
-		MaxHeight="150"
+		Title="Client editing"
+		MaxWidth="450"
+		MaxHeight="250"
 		SizeToContent="Height">
 	<Design.DataContext>
-		<vm:AirplaneViewModel/>
+		<vm:ClientViewModel/>
 	</Design.DataContext>
 
 	<Window.Styles>
 		<StyleInclude Source="/AirplaneBookingSystemStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,*" ColumnDefinitions="Auto,*">
-		<Label VerticalAlignment="Center">Model of airplane</Label>
-		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Model}"/>
+	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
+		<Label Grid.Row="0" Grid.Column="0">Full name</Label>
+		<Label Grid.Row="1" Grid.Column="0">Passport number</Label>
+		<Label Grid.Row="2" Grid.Column="0">Birthday data</Label>
 
-		<StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}"/>
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding PassportNumber}"/>
+		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding BirthdayData}"/>
+		<StackPanel Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
