--- a/DotNet2023.Client/Views/EducationWorkerWindow.axaml
+++ b/DotNet2023.Client/Views/EducationWorkerWindow.axaml
@@ -12,8 +12,9 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
 		<vm:EducationWorkerViewModel/>
 	</Design.DataContext>
-
-
+	<Window.Styles>
+		<StyleInclude Source="/Assets/Styles.axaml" />
+	</Window.Styles>
 	<Grid RowDefinitions="Auto,*,*,*,*,*, *, *, *, *, *,*,*" ColumnDefinitions="Auto, *,*">
 		<Label Grid.Row="0" Grid.Column="0">Name</Label>
 		<Label Grid.Row="1" Grid.Column="0">Surname</Label>
