--- a/DotNet2023.Client/Views/HigherEducationInstitutionWindow.axaml
+++ b/DotNet2023.Client/Views/HigherEducationInstitutionWindow.axaml
@@ -13,8 +13,9 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
 		<vm:HigherEducationInstitutionViewModel/>
 	</Design.DataContext>
-
-
+	<Window.Styles>
+		<StyleInclude Source="/Assets/Styles.axaml" />
+	</Window.Styles>
 	<Grid RowDefinitions="Auto,*,*,*,*,*,*,*,*" ColumnDefinitions="Auto, *,*">
 		<Label Grid.Row="0" Grid.Column="0">FullName</Label>
 		<Label Grid.Row="1" Grid.Column="0">Initials</Label>
