--- a/DotNet2023.Client/Views/MainWindow.axaml
+++ b/DotNet2023.Client/Views/MainWindow.axaml
@@ -14,9 +14,46 @@
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
 		<vm:MainWindowViewModel/>
     </Design.DataContext>
-
+	<Window.Styles>
+		<StyleInclude Source="/Assets/Styles.axaml" />
+	</Window.Styles>
 	<TabControl>
-		<TabItem Header="Institution">
+		<TabItem Header="Queries">
+			<Grid RowDefinitions="Auto,*">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Command="{Binding OnUpdateQueries}">Execute</Button>
+				</StackPanel>
+				
+				<ScrollViewer Grid.Row="1">
+					<Grid RowDefinitions="Auto, Auto, Auto, *">
+						<StackPanel Grid.Row="0" Orientation="Horizontal">
+							<Label>Popular speciality</Label>
+						</StackPanel>
+						<DataGrid Grid.Row="1" AutoGenerateColumns="False" Items="{Binding PopularSpecialies}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Title" Binding="{Binding Title}" />
+								<DataGridTextColumn Header="Code" Binding="{Binding Code}" />
+							</DataGrid.Columns>
+						</DataGrid>
+						<StackPanel Grid.Row="2" Orientation="Horizontal">
+							<Label>Max Departments</Label>
+						</StackPanel>
+						<DataGrid Grid.Row="3" AutoGenerateColumns="False" Items="{Binding InstitutionsWithMaxDepartmentsAsync}">
+							<DataGrid.Columns>
+								<DataGridTextColumn Header="Name" Binding="{Binding FullName}" />
+								<DataGridTextColumn Header="Phone" Binding="{Binding Phone}" />
+								<DataGridTextColumn Header="Email" Binding="{Binding Email}"/>
+							</DataGrid.Columns>
+						</DataGrid>
+
+					</Grid>			
+				</ScrollViewer>
+
+				
+			</Grid>
+		</TabItem>
+
+			<TabItem Header="Institution">
 			<Grid RowDefinitions="Auto,*">
 				<StackPanel Grid.Row="0" Orientation="Vertical">
 					<StackPanel Orientation="Horizontal">
