--- a/DotNet2023.Client/Views/StudentWindow.axaml
+++ b/DotNet2023.Client/Views/StudentWindow.axaml
@@ -14,6 +14,10 @@
 		<vm:StudentViewModel/>
 	</Design.DataContext>
 
+	<Window.Styles>
+		<StyleInclude Source="/Assets/Styles.axaml" />
+	</Window.Styles>
+	
 	<Grid RowDefinitions="Auto,*,*,*,*,*, *, *, *, *, *" ColumnDefinitions="Auto, *,*">
 
 		<Label Grid.Row="0" Grid.Column="0">Name</Label>
