Created a table of company requests Createad a table of employees Createad a table of job applications Changes in controllers: Now the correct id value is returned

--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/CompanyApplicationWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/CompanyApplicationWindow.axaml
@@ -9,7 +9,7 @@
 		SizeToContent="Height"
 		MaxWidth="500">
 	<Design.DataContext>
-		<vm:CompanyViewModel></vm:CompanyViewModel>
+		<vm:CompanyApplicationViewModel></vm:CompanyApplicationViewModel>
 	</Design.DataContext>
 
 	<Window.Styles>
