--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/EmployeeWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/EmployeeWindow.axaml
@@ -3,36 +3,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="RecruitmentAgency.Client.Views.CompanyWindow"
+        x:Class="RecruitmentAgency.Client.Views.EmployeeWindow"
 		xmlns:vm= "using:RecruitmentAgency.Client.ViewModels"
-        Title="Editing a company"
+        Title="Editing a employee"
 		SizeToContent="Height"
 		MaxWidth="500">
 	<Design.DataContext>
-		<vm:CompanyViewModel></vm:CompanyViewModel>
+		<vm:EmployeeViewModel></vm:EmployeeViewModel>
 	</Design.DataContext>
 
 	<Window.Styles>
 		<StyleInclude Source="/RecruitmentAgencyStyles.axaml" />
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto *" ColumnDefinitions="Auto,*">
+	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto, *" ColumnDefinitions="Auto,*">
 		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">PersonalName</Label>
 		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Telephone</Label>
-		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">WorkExperience</Label>
-		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Education</Label>
-		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Salary</Label>
+		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">WorkExperience </Label>
+		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Education </Label>
+		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Salary </Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding PersonalName}"/>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Telephone}"/>
 		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding WorkExperience}"/>
 		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Education}"/>
 		<TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Salary}"/>
-		<StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" 
+		<StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Accept</Button>
 			<Button IsDefault="False" Click="CancelButton_OnClick">Cancel</Button>
 		</StackPanel>
 	</Grid>
-	
+
 </Window>
