--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/JobApplicationWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/JobApplicationWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="RecruitmentAgency.Client.Views.JobApplicationWindow"
+		Icon="/Assets/Edit.png"
 		xmlns:vm= "using:RecruitmentAgency.Client.ViewModels"
         Title="Editing a company"
 		SizeToContent="Height"
