--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/TitleWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/TitleWindow.axaml
@@ -5,6 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="RecruitmentAgency.Client.Views.TitleWindow"
 		xmlns:vm= "using:RecruitmentAgency.Client.ViewModels"
+		Icon="/Assets/Edit.png"
         Title="Editing a title"
 		SizeToContent="Height"
 		MaxWidth="500">
