--- a/Factory/Factory/Factory.Client/Views/EnterpriseWindow.axaml
+++ b/Factory/Factory/Factory.Client/Views/EnterpriseWindow.axaml
@@ -5,6 +5,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Factory.Client.Views.EnterpriseWindow"
         xmlns:vm="using:Factory.Client.ViewModels"
+		Icon="/Assets/icon_editing.ico"
 		Title="Enterprise editing"
 		MaxWidth="500"
 		SizeToContent="Height">
