--- a/PONRF/PonrfClient/Views/MainWindow.axaml
+++ b/PONRF/PonrfClient/Views/MainWindow.axaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PonrfClient.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/logo3.png"
         Title="PonrfClient">
 
     <Design.DataContext>
@@ -14,7 +14,7 @@
 
 	<Grid Classes="MainGrid" RowDefinitions="Auto,*">
 		<StackPanel Grid.Row="0" Orientation="Horizontal">
-			<Button Classes="ToolButton">
+			<Button Classes="ToolButton" Command="{Binding OnAddPrivatizedBuildingCommand}">
 				<Image Source="/Assets/Add.png" />
 			</Button>
 			<Button Classes="ToolButton">
@@ -24,10 +24,11 @@
 				<Image Source="/Assets/Delete.png" />
 			</Button>
 		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="True"
+		<DataGrid Grid.Row="1" AutoGenerateColumns="False"
 				  Items="{Binding	PrivatizedBuildings}">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="Наименование"/>
+				<DataGridTextColumn Header="Дата продажи"
+									Binding="{Binding DateOfSale}"/>
 			</DataGrid.Columns>
 		</DataGrid>
 	</Grid>
