--- a/FabricApp/Fabrics.Client/FabricsStyles.axaml
+++ b/FabricApp/Fabrics.Client/FabricsStyles.axaml
@@ -5,7 +5,13 @@
         </Border>
     </Design.PreviewWith>
 	<Style Selector="Button.ToolButton">
+		 <Setter Property="Width" Value="32"/>
+		 <Setter Property="Height" Value="32"/>
 		<Setter Property="Margin" Value="0,4,0,4"/>
+	</Style>
+
+	<Style Selector="Button">
+		<Setter Property="Width" Value="100"/>
 	</Style>
 
 	<Style Selector="Grid.MainGrid">
