--- a/PONRF/PonrfClient/Views/MainWindow.axaml
+++ b/PONRF/PonrfClient/Views/MainWindow.axaml
@@ -12,29 +12,66 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,*">
-		<StackPanel Grid.Row="0" Orientation="Horizontal">
-			<Button Classes="ToolButton" Command="{Binding OnAddPrivatizedBuildingCommand}">
-				<Image Source="/Assets/Add.png" />
-			</Button>
-			<Button Classes="ToolButton">
-				<Image Source="/Assets/Change.png" />
-			</Button>
-			<Button Classes="ToolButton">
-				<Image Source="/Assets/Delete.png" />
-			</Button>
-		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="False"
-				  Items="{Binding	PrivatizedBuildings}">
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="Дата продажи"
-									Binding="{Binding DateOfSale}"/>
-			</DataGrid.Columns>
-		</DataGrid>
-	</Grid>
-
+	<TabControl>
+		<TabItem Header="Privatized buildings" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddPrivatizedBuildingCommand}">
+						<Image Source="/Assets/Add.png" />
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangePrivatizedBuildingCommand}">
+						<Image Source="/Assets/Change.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeletePrivatizedBuildingCommand}">
+						<Image Source="/Assets/Delete.png" />
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding	PrivatizedBuildings}"
+						  SelectedItem="{Binding SelectedPrivatizedBuilding}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Date of sale" Binding="{Binding DateOfSale}"/>
+						<DataGridTextColumn Header="First cost" Binding="{Binding FirstCost}"/>
+						<DataGridTextColumn Header="Second cost" Binding="{Binding SecondCost}"/>
+						<DataGridTextColumn Header="Customer's Id" Binding="{Binding CustomerId}"/>
+						<DataGridTextColumn Header="Auction's Id" Binding="{Binding AuctionId}"/>
+						<DataGridTextColumn Header="Building's Id" Binding="{Binding BuildingId}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+		<TabItem Header="Buildings" VerticalContentAlignment="Center">
+			<Grid Classes="MainGrid" RowDefinitions="Auto,*">
+				<StackPanel Grid.Row="0" Orientation="Horizontal">
+					<Button Classes="ToolButton" Command="{Binding OnAddBuildingCommand}">
+						<Image Source="/Assets/Add.png" />
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnChangeBuildingCommand}">
+						<Image Source="/Assets/Change.png"/>
+					</Button>
+					<Button Classes="ToolButton" Command="{Binding OnDeleteBuildingCommand}">
+						<Image Source="/Assets/Delete.png" />
+					</Button>
+				</StackPanel>
+				<DataGrid Grid.Row="1" AutoGenerateColumns="False"
+						  Items="{Binding	Buildings}"
+						  SelectedItem="{Binding SelectedBuilding}">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Registration number" Binding="{Binding RegistNum}"/>
+						<DataGridTextColumn Header="District" Binding="{Binding District}"/>
+						<DataGridTextColumn Header="Street" Binding="{Binding Street}"/>
+						<DataGridTextColumn Header="House number" Binding="{Binding HouseNumber}"/>
+						<DataGridTextColumn Header="Area" Binding="{Binding Area}"/>
+						<DataGridTextColumn Header="Floors" Binding="{Binding Floors}"/>
+						<DataGridTextColumn Header="Date of sale" Binding="{Binding DateOfSale}"/>
+					</DataGrid.Columns>
+				</DataGrid>
+			</Grid>
+		</TabItem>
+	</TabControl>
+	
 	<Window.Styles>
-		<StyleInclude Source="/PonrfStyles.axaml" />
+		<StyleInclude Source="/PonrfStyles.axaml"/>
 	</Window.Styles>
 
 </Window>
