--- a/PharmacyCityNetwork/PharmacyCityNetwork.Client/PharmacyCityNetworkStyles.axaml
+++ b/PharmacyCityNetwork/PharmacyCityNetwork.Client/PharmacyCityNetworkStyles.axaml
@@ -12,6 +12,10 @@
 		<Setter Property="Margin" Value="0,4,0,4"/>
 	</Style>
 
+	<Style Selector="Button">
+		<Setter Property="Width" Value="100"/>
+	</Style>
+
 	<Style Selector="Grid.MainGrid">
 		<Setter Property="Margin" Value="8"/>
 	</Style>
