--- a/PONRF/PonrfClient/Views/AuctionWindow.axaml
+++ b/PONRF/PonrfClient/Views/AuctionWindow.axaml
@@ -4,6 +4,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="PonrfClient.Views.AuctionWindow"
-        Title="AuctionWindow">
+		xmlns:vm="using:PonrfClient.ViewModels"
+        Title="Редактирование записей о покупателях"
+		MaxWidth="500"
+		SizeToContent="Height">
+    <Design.DataContext>
+	    <vm:AuctionViewModel/>
+    </Design.DataContext>
+	<Window.Styles>
+		<StyleInclude Source="/PonrfStyles.axaml" />
+	</Window.Styles>
 
+	<Grid Classes="MainGrid" RowDefinitions="Auto,*,*" ColumnDefinitions="Auto,*,*">
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Date: </Label>
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Organizer: </Label>
+
+		<DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding Date}" />
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Organizer}" />
+
+		<StackPanel Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
+					HorizontalAlignment="Right"
+					Orientation="Horizontal">
+			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
+			<Button IsCancel="True" Click="CancelButton_OnClick">Отмена</Button>
+		</StackPanel>
+	</Grid>
 </Window>
