--- a/PONRF/PonrfClient/Views/BuildingWindow.axaml
+++ b/PONRF/PonrfClient/Views/BuildingWindow.axaml
@@ -7,7 +7,7 @@
         xmlns:vm="using:PonrfClient.ViewModels"
         Title="BuildingWindow"
 		MaxWidth="500"
-	    SizeToContent="WidthAndHeight">
+	    SizeToContent="Height">
 	<Design.DataContext>
 		<vm:BuildingViewModel/>
 	</Design.DataContext>
@@ -17,21 +17,21 @@
 	</Window.Styles>
 
 	<Grid Classes="MainGrid" RowDefinitions="Auto,*,*,*,*,*,*,*" ColumnDefinitions="Auto,*,*">
-		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Registration number: </Label>
-		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">District: </Label>
-		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Street: </Label>
-		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">House number: </Label>
-		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Area: </Label>
-		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Floors: </Label>
-		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Date of sale: </Label>
+		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Date of build: </Label>
+		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Registration number: </Label>
+		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">District: </Label>
+		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Street: </Label>
+		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">House number: </Label>
+		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">Area: </Label>
+		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">Floors: </Label>
 
-		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding RegistNum}" />
-		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding District}" />
-		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Street}" />
-		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding HouseNumber}"/>
-		<TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Area}" />
-		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Floors}" />
-		<DatePicker Grid.Row="6" Grid.Column="1" SelectedDate="{Binding DateOfSale}" />
+		<DatePicker Grid.Row="0" Grid.Column="1" SelectedDate="{Binding DateOfBuild}" />
+		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding RegistNum}" />
+		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding District}" />
+		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Street}" />
+		<TextBox Grid.Row="4" Grid.Column="1" Text="{Binding HouseNumber}"/>
+		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding Area}" />
+		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding Floors}" />
 
 		<StackPanel Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
